--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="hero-post shadow">
-              <img src="/img/sky.jpg" alt="" class="img-fluid" />
+              <img src="img/sky.jpg" alt="" class="img-fluid" />
               <div class="hero-post-badges text-center">
                 <a class="p-1 px-1 mb-2" href="#"><i class="mr-2 far fa-calendar"></i> 20. April 2020 </a>
                 <a class="p-1 px-1" href="#">Nature</a>
@@ -87,7 +87,7 @@
                 <div class="row">
                   <div class="col-md-2">
                     <img
-                      src="/img/me-crop.jpg"
+                      src="img/me-crop.jpg"
                       alt="Author"
                       class="img-fluid rounded-circle"
                     />
@@ -101,7 +101,7 @@
           </div>
           <div class="col-lg-4">
             <div class="hero-post text-center shadow mb-4">
-              <img src="/img/yogo.jpg" alt="" class="img-fluid" />
+              <img src="img/yogo.jpg" alt="" class="img-fluid" />
               <div class="hero-post-badges">
                 <a class="p-1 px-1 mb-1" href="#"><i class="mr-2 far fa-calendar"></i> 20. April 2020 </a>
                 <a class="p-1 px-1" href="#">Self-Care</a>
@@ -122,7 +122,7 @@
               </div>
             </div>
             <div class="hero-post text-center shadow">
-              <img src="/img/twomen.jpg" alt="" class="img-fluid" />
+              <img src="img/twomen.jpg" alt="" class="img-fluid" />
               <div class="hero-post-badges">
                 <a class="p-1 px-1 mb-1" href="#"><i class="mr-2 far fa-calendar"></i> 20. April 2020 </a>
                 <a class="p-1 px-1" href="#">Culture</a>
@@ -131,7 +131,7 @@
                 <div class="row">
                   <div class="col-md-3">
                     <img
-                      src="/img/auth5.jpg"
+                      src="img/auth5.jpg"
                       alt="Author"
                       class="img-fluid rounded-circle"
                     />
