--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section class="hero py-4">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-sm-8">
             <div class="hero-post shadow">
               <img src="img/sky.jpg" alt="" class="img-fluid" />
               <div class="hero-post-badges text-center">
@@ -99,7 +99,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-sm-4">
             <div class="hero-post text-center shadow mb-4">
               <img src="img/yogo.jpg" alt="" class="img-fluid" />
               <div class="hero-post-badges">
@@ -108,14 +108,14 @@
               </div>
               <div class="hero-post-content">
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-sm-3">
                     <img
                       src="img/author2.jpg"
                       alt="Author"
-                      class="img-fluid rounded-circle"
+                      class="img-fluid rounded-circle "
                     />
                   </div>
-                  <div class="col-md-9">
+                  <div class="col-sm-9">
                     <h3 class="w-100">Lorem ipsum dolor</h3>
                   </div>
                 </div>
@@ -154,7 +154,7 @@
           <div class="col-md-8">
             <article class="blog-post shadow mb-3">
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-4">
                   <img class="img-fluid" src="img/twopplsit.jpg" alt="" />
                 </div>
                 <div class="col-sm-8">
@@ -301,7 +301,7 @@
             <h4 class="aside-heading mt-4 mb-3 pl-2">Popular Authors</h4>
             <article class="row author mb-3">
               <div class="col-sm-4">
-                <img class="img-fluid rounded-circle" src="img/me.JPG" alt="" />
+                <img class="img-fluid rounded-circle" src="img/me-crop.jpg" alt="" />
               </div>
               <div class="col-sm-8">
                 <h5 class="m-0">Jane Doe</h5>
