--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>Blue Rose Blog</title>
 
     <!-- Bootstrap CSS -->
@@ -15,14 +12,8 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/fae22c1c8a.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+    <script src="https://kit.fontawesome.com/fae22c1c8a.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
